Updated MANIFEST file with recursive-includes for pywavefront and test directories

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,9 @@
-include pywavefront/__init__.py
-include pywavefront/material.py
-include pywavefront/mesh.py
-include pywavefront/parser.py
-include pywavefront/texture.py
-include test/test_material.py
-include test/test_mesh.py
-include test/test_parser.py
-include test/test_texture.py
-include test/test_wavefront.py
+# Documentation
 include README.md
 include LICENSE
+
+# Source files
+recursive-include pywavefront *
+
+# Tests
+recursive-include test/test_*
