--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
             pip install nose
+            sudo apt-get update; sudo apt-get install freeglut3-dev
 
       - save_cache:
           paths:
