--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python -m venv venv
+            virtualenv venv
             . venv/bin/activate
             pip install -r requirements.txt
             pip install nose
