--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,13 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            rm -rf venv # bad pip link
+            virtualenv venv
             . venv/bin/activate
             pip install -r requirements.txt
             pip install nose
             sudo apt-get update
             sudo apt-get install freeglut3-dev
-            sudo apt-get install cmake zlib1g-dev libjpeg-dev xvfb libav-tools xorg-dev libboost-all-dev libsdl2-dev swig
 
       - save_cache:
           paths:
