--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
             virtualenv venv
             . venv/bin/activate
             pip install -r requirements.txt
-            pip install nose
+            pip install nose mock
             sudo apt-get update
             sudo apt-get install freeglut3-dev
 
