--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
+          - v1-dependencies-{{ checksum "test-requirements.txt" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
@@ -33,8 +33,7 @@ jobs:
             rm -rf venv # bad pip link
             virtualenv venv
             . venv/bin/activate
-            pip install -r requirements.txt
-            pip install nose mock
+            pip install -r test-requirements.txt
             sudo apt-get update
             sudo apt-get install freeglut3-dev
 
@@ -54,8 +53,7 @@ jobs:
             . venv/bin/activate
             Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
             export DISPLAY=':99.0'
-            cd test
-            nosetests
+            pytest
 
       - store_artifacts:
           path: test-reports
