CircleCI: Install pywavefront before running tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
             . venv/bin/activate
             Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
             export DISPLAY=':99.0'
+            python setup.py develop
             pytest
 
       - store_artifacts:
