CircleCI: Incorrect cache key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - save_cache:
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
+          key: v1-dependencies-{{ checksum "test-requirements.txt" }}
 
       # run tests!
       # this example uses Django's built-in test-runner
